--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 body {
     margin: 60px auto;
     width: 70%;
+    background-color:lavenderblush;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -22,6 +23,7 @@ a:hover {
 h1 {
     font-size: 5em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    color:teal
 }
 p {
     font-size: 1.5em;
@@ -41,3 +43,5 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+
