--- a/main.css
+++ b/main.css
@@ -25,6 +25,11 @@ h1 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     color:teal
 }
+
+div {
+  background-color: White;
+}
+
 p {
     font-size: 1.5em;
     line-height: 1.4em;
