--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ a:hover {
 h1 {
     font-size: 5em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    color:teal
+    color:teal;
 }
 
 div {
@@ -34,6 +34,7 @@ p {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
+    background-color: Yellow;
 }
 footer {
     border-top: 1px solid #d5d5d5;
