--- a/main.css
+++ b/main.css
@@ -26,8 +26,22 @@ h1 {
     color:teal;
 }
 
-div {
-  background-color: White;
+.div-1 {
+  background-color: blue; 
+  height: 50px;
+  width: 50px;
+}
+   
+.div-2 {
+  background-color: red; 
+  height: 100px;
+  width: 100px;
+}
+   
+.div-3 {
+  background-color: yellow; 
+  height: 200px;
+  width: 200px;
 }
 
 p {
