--- a/main.css
+++ b/main.css
@@ -27,21 +27,9 @@ h1 {
 }
 
 .div-1 {
-  background-color: blue; 
-  height: 50px;
-  width: 50px;
-}
-   
-.div-2 {
-  background-color: red; 
-  height: 100px;
-  width: 100px;
-}
-   
-.div-3 {
-  background-color: yellow; 
-  height: 200px;
-  width: 200px;
+  background-color: white; 
+  border-style: 2px solid black;
+  border-radius: 5px;
 }
 
 p {
