--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@ h1 {
   background-color: white; 
   border-style: 2px solid black;
   border-radius: 5px;
-  box-shadow: 0px 0px 5px 12px lightblue;
+  box-shadow: 0px 0px 5px 12px LightSlateGray;
 }
 
 p {
