--- a/main.css
+++ b/main.css
@@ -32,6 +32,10 @@ h1 {
   border-radius: 5px;
   box-shadow: 0px 0px 5px 5px LightSlateGray;
   margin-top: 40px;
+  padding-top: 50px;
+  padding-right: 50px;
+  padding-bottom: 50px;
+  padding-left: 50px;
 }
 
 p {
