--- a/main.css
+++ b/main.css
@@ -30,7 +30,7 @@ h1 {
   background-color: white; 
   border-style: 2px solid black;
   border-radius: 5px;
-  box-shadow: 0px 0px 5px 5px LightSlateGray;
+  box-shadow: 0px 0px 5px 5px LightGrey;
   margin-top: 40px;
   padding-top: 50px;
   padding-right: 50px;
